After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778864 - let the Run button be labeled Stop when the process is already running
let the Run button be labeled Stop when the process is already running
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
3.23.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-02-18 08:00 UTC by Mohammed Sadiq
Modified: 2017-02-18 17:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
run-button: add tooltip for stopping application (1.07 KB, patch)
2017-02-18 17:17 UTC, Christian Hergert
committed Details | Review
run-button: add tooltips for run button (5.36 KB, patch)
2017-02-18 17:17 UTC, Christian Hergert
committed Details | Review

Description Mohammed Sadiq 2017-02-18 08:00:35 UTC
When the built program is running, the Run item in menu (F5, near the omnibar) should be labeled Stop (may be with the same key binding) which would stop the running program.
Comment 1 Christian Hergert 2017-02-18 17:17:27 UTC
Created attachment 346142 [details] [review]
run-button: add tooltip for stopping application

We should at minimum have a tooltip for what the button will do when
clicked. We might want a keybinding to go with this to perform the stop,
but that isn't clear since the application wont have focus.
Comment 2 Christian Hergert 2017-02-18 17:17:42 UTC
Created attachment 346143 [details] [review]
run-button: add tooltips for run button

This adds a tooltip for the drop down menu as well as the run button
itself. This re-uses the GtkShortcutsShortcut so that we get fancy icon
styling on the shortcut.
Comment 3 Christian Hergert 2017-02-18 17:18:53 UTC
Attachment 346142 [details] pushed as 181d188 - run-button: add tooltip for stopping application
Attachment 346143 [details] pushed as 3d7ba52 - run-button: add tooltips for run button