run-button: add tooltips for run button

This adds a tooltip for the drop down menu as well as the run button
itself. This re-uses the GtkShortcutsShortcut so that we get fancy icon
styling on the shortcut.

https://bugzilla.gnome.org/show_bug.cgi?id=778864